--- a/1-VideoPackage.py.ipynb
+++ b/1-VideoPackage.py.ipynb
@@ -55,63 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4次元配列表示\n",
-      "[[[314 316 317 ... 303 303 299]\n",
-      "  [316 316 317 ... 305 303 302]\n",
-      "  [319 317 321 ... 307 304 303]\n",
-      "  ...\n",
-      "  [392 394 397 ... 387 385 381]\n",
-      "  [391 392 394 ... 387 385 381]\n",
-      "  [391 391 392 ... 387 384 381]]\n",
-      "\n",
-      " [[315 317 318 ... 302 301 299]\n",
-      "  [316 319 319 ... 303 302 301]\n",
-      "  [318 319 319 ... 305 303 303]\n",
-      "  ...\n",
-      "  [393 396 398 ... 387 386 379]\n",
-      "  [392 392 396 ... 386 384 379]\n",
-      "  [389 391 392 ... 385 384 378]]\n",
-      "\n",
-      " [[315 315 316 ... 301 300 301]\n",
-      "  [315 316 317 ... 304 302 302]\n",
-      "  [316 316 318 ... 305 304 303]\n",
-      "  ...\n",
-      "  [395 395 395 ... 384 383 379]\n",
-      "  [391 394 394 ... 384 383 379]\n",
-      "  [390 390 391 ... 383 380 379]]\n",
-      "\n",
-      " ...\n",
-      "\n",
-      " [[312 312 313 ... 298 298 297]\n",
-      "  [313 313 313 ... 300 300 298]\n",
-      "  [314 314 315 ... 303 301 300]\n",
-      "  ...\n",
-      "  [387 388 389 ... 379 374 373]\n",
-      "  [387 387 388 ... 378 374 371]\n",
-      "  [385 385 386 ... 374 372 370]]\n",
-      "\n",
-      " [[311 312 313 ... 298 298 299]\n",
-      "  [312 312 313 ... 300 300 299]\n",
-      "  [312 314 316 ... 303 300 300]\n",
-      "  ...\n",
-      "  [385 387 389 ... 378 374 374]\n",
-      "  [385 386 388 ... 376 374 372]\n",
-      "  [383 384 386 ... 375 371 370]]\n",
-      "\n",
-      " [[311 314 314 ... 298 297 297]\n",
-      "  [314 314 314 ... 301 299 298]\n",
-      "  [314 314 314 ... 304 301 298]\n",
-      "  ...\n",
-      "  [386 388 388 ... 377 375 374]\n",
-      "  [385 387 388 ... 377 375 371]\n",
-      "  [384 385 386 ... 375 371 370]]]\n"
+     "ename": "NameError",
+     "evalue": "name 'h5py' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-4914d4d1f9bf>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[1;32mwith\u001b[0m \u001b[0mh5py\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mFile\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mhdfpath\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m'r'\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mf\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m     \u001b[1;31m# ファイルオブジェクトをイテレートするとファイル直下のオブジェクト名を返す\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      3\u001b[0m     \u001b[1;31m#for k in f:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"多次元配列表示\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;31m#次元数注意\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m     \u001b[0mdata\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mf\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;34m'/Object'\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'h5py' is not defined"
      ]
     }
    ],
