--- a/col-1.py.ipynb
+++ b/col-1.py.ipynb
@@ -448,7 +448,7 @@
     "s = list[0]\n",
     "t = list[1]\n",
     "\n",
-    "colfig.compare(s,t)\n",
+    "#colfig.compare(s,t)\n",
     "\n",
     "\n",
     "    \n",
