--- a/CNMF-e.ipynb
+++ b/CNMF-e.ipynb
@@ -2,21 +2,23 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid character in identifier (<ipython-input-2-38e439f28d6a>, line 2)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-2-38e439f28d6a>\"\u001b[1;36m, line \u001b[1;32m2\u001b[0m\n\u001b[1;33m    dを一本鎖にしたものをXとする。Xのサイズは長さのみで93810.\u001b[0m\n\u001b[1;37m                                   ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m invalid character in identifier\n"
-     ]
+     "data": {
+      "text/plain": [
+       "'\\n\\n#a:def(a ∈ R^d) \\n\\nl  = 10\\nlx = 10\\nly = 10\\n\\n#WHILE文内\\n##################################################################################\\n#x* define arg max-x(L(x)・R(x))\\nLR = L(x)*R(x)\\nx_star = LR.argmax()\\nx_sc = x_star/265\\ny_sc = x_star/354\\n\\n###################################################################################\\n#Ωk define {x|2L+1 sraound x*}\\nomega=[]\\nif x_sc < l:\\n    l = x_sc\\nif y_sc < l:\\n    l =y_sc\\n    \\nif x_sc > 344:\\n    lx = (354-x_sc)\\nif y_sc > 255:\\n    ly = (255-x_sc)    \\n    \\nomega.append(data[x_sc-l1][y_sc-l1]:data[x_sc+l2][ysc+l2])\\n###################################################################################\\n#r(x) define corr (Z(x)・Z(x*))\\nr_x.append(r(x))\\n\\n####################################################################################\\nr_3 = [i for i in r_x if i < 0.3]\\nr_7 = [i for i in r_x if i < 0.7]\\n\\nY_bg =()/len(r_3)\\nC_k  =()/len(r_7)\\n\\n####################################################################################\\n# argmin a ,b_f,b_0 ||YΩk - (  (a・c_k^T)  +  (b_f・Y_bg^T)  +  (b_0・1^T)    ) ||^2    ##^Tは転置の意味\\n\\n####################################################################################\\n#\\nY = Y - (a_k*c_k^T)\\n'"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "data=d*t\n",
-    "dを一本鎖にしたものをXとする。Xのサイズは長さのみで93810.\n",
+    "#data=d*t\n",
+    "#dを一本鎖にしたものをXとするXのサイズは長さのみで93810.\n",
     "\n",
     "\n",
     "\n",
@@ -73,9 +75,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "print(\"a\")"
-   ]
+   "source": []
   }
  ],
  "metadata": {
