c++のラッパー、juliaで書き直しも視野に入れる。とりあえず内包表記

--- a/CNMF_E（Apr22）.ipynb
+++ b/CNMF_E（Apr22）.ipynb
@@ -3,7 +3,9 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#外部ライブラリ\n",
@@ -16,7 +18,9 @@
   {
    "cell_type": "code",
    "execution_count": 114,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#ガウシアンカーネル\n",
@@ -123,7 +127,7 @@
     "except:\n",
     "    pass\n",
     "    \n",
-    "print(naiho)            \n",
+    "#print(naiho)            \n",
     "print(\"fin\")"
    ]
   },
@@ -184,7 +188,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#本体\n",
